tests/ui/resolve/suggestions/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:17:5
   |
LL |     a.I
   |     ^
   |
   = note: a module named `a` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a.I
LL +     a::I
   |

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:23:5
   |
LL |     a.g()
   |     ^
   |
   = note: a module named `a` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a.g()
LL +     a::g()
   |

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:29:5
   |
LL |     a.b.J
   |     ^
   |
   = note: a module named `a` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a.b.J
LL +     a::b.J
   |

error[E0423]: cannot find value `b` in module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:35:8
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.J
   |        ^
   |
   = note: a module named `a::b` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a::b.J
LL +     a::b::J
   |
help: a constant with a similar name exists
   |
LL -     a::b.J
LL +     a::I.J
   |

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:42:5
   |
LL |     a.b.f();
   |     ^
   |
   = note: a module named `a` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a.b.f();
LL +     a::b.f();
   |

error[E0423]: cannot find value `b` in module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:46:15
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     v.push(a::b);
   |               ^
   |
   = note: a module named `a::b` exists in another namespace
help: a constant with a similar name exists
   |
LL -     v.push(a::b);
LL +     v.push(a::I);
   |

error[E0423]: cannot find value `b` in module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:52:8
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b.f()
   |        ^
   |
   = note: a module named `a::b` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     a::b.f()
LL +     a::b::f()
   |
help: a constant with a similar name exists
   |
LL -     a::b.f()
LL +     a::I.f()
   |

error[E0423]: cannot find value `b` in module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:59:8
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b
   |        ^
   |
   = note: a module named `a::b` exists in another namespace
help: a constant with a similar name exists
   |
LL -     a::b
LL +     a::I
   |

error[E0423]: cannot find function `b` in module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:65:8
   |
LL |     pub const I: i32 = 1;
   |     --------------------- similarly named constant `I` defined here
...
LL |     a::b()
   |        ^
   |
   = note: a module named `a::b` exists in another namespace
help: a constant with a similar name exists
   |
LL -     a::b()
LL +     a::I()
   |

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:72:9
   |
LL |         a
   |         ^ not found in this scope
...
LL |     module!().g::<()>(); // no `help` here!
   |     --------- in this macro invocation
   |
   = note: a module named `a` exists in another namespace
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:72:9
   |
LL |         a
   |         ^ not found in this scope
...
LL |     module!().g; // no `help` here!
   |     --------- in this macro invocation
   |
   = note: a module named `a` exists in another namespace
   = note: this error originates in the macro `module` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:80:9
   |
LL |         a.f()
   |         ^
...
LL |     let _ = create!(method);
   |             --------------- in this macro invocation
   |
   = note: a module named `a` exists in another namespace
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL -         a.f()
LL +         a::f()
   |

error[E0423]: cannot find value `a` in this scope
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:85:9
   |
LL |         a.f
   |         ^
...
LL |     let _ = create!(field);
   |             -------------- in this macro invocation
   |
   = note: a module named `a` exists in another namespace
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL -         a.f
LL +         a::f
   |

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0423`.
